--- a/sublime/config/sublime-text-3.symlink/.gitignore
+++ b/sublime/config/sublime-text-3.symlink/.gitignore
@@ -1,3 +1,4 @@
+*.bak
 Index
 Cache
 Local
@@ -8,4 +9,8 @@ Packages/User/GoSublime
 Pacakges/User/GoSublime-aux.sublime-settings
 Packages/User/Package\ Control.cache
 Packages/User/.SublimeREPLHistory
-*.bak
+Packages/SublimeHaskell
+Packages/GoSublime
+Packages/OmniMarkupPreviewer
+Packages/User/MakeCommand.sublime-commands
+Packages/User/Package Control.last-run
