--- a/sublime/config/sublime-text-3.symlink/.gitignore
+++ b/sublime/config/sublime-text-3.symlink/.gitignore
@@ -14,3 +14,6 @@ Packages/GoSublime
 Packages/OmniMarkupPreviewer
 Packages/User/MakeCommand.sublime-commands
 Packages/User/Package Control.last-run
+Packages/oauthlib
+Packages/requests
+
