--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sublime/config/sublime-text-3.symlink/Packages/SublimeLinter-contrib-hdevtools"]
 	path = sublime/config/sublime-text-3.symlink/Packages/SublimeLinter-contrib-hdevtools
 	url = https://github.com/ch1bo/SublimeLinter-contrib-hdevtools.git
+[submodule "zsh/zsh-syntax-highlighting"]
+	path = zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
