Use hdevtools linter from package control, Removed cabal config, Added single step resize to herbsluft config

--- a/sublime/config/sublime-text-3.symlink/.gitignore
+++ b/sublime/config/sublime-text-3.symlink/.gitignore
@@ -9,6 +9,7 @@ Packages/SublimeHaskell
 Packages/SublimeLinter
 Packages/GoSublime
 Packages/OmniMarkupPreviewer
+Packages/HTML-CSS-JS Prettify
 
 # Automatically installed packages
 Packages/bz2
