Various changes during distribution change

--- a/ranger/config/ranger.symlink/rc.conf
+++ b/ranger/config/ranger.symlink/rc.conf
@@ -293,8 +293,8 @@ map uy uncut
 map ya copy mode=add
 map yr copy mode=remove
 
-# Delete files (by moving them to trash)
-map DD shell mv -t /home/${USER}/.trash %s
+# Delete files
+map DD delete
 
 # Temporary workarounds
 map dgg eval fm.cut(dirarg=dict(to=0), narg=quantifier)
