Xmonad IM layout and atom config

--- a/atom/atom.symlink/.gitignore
+++ b/atom/atom.symlink/.gitignore
@@ -1,10 +1,11 @@
-storage
+.apm
+.node-gyp
+.npm
+blob-store
 compile-cache
 dev
-.npm
-.node-gyp
-.apm
-packages
 nohup.out
+packages
+storage
 
 projects.cson
