Disable gnome settings daemon for some things, various keybind fixes

--- a/gnome/config/dconf.symlink/gnome.conf
+++ b/gnome/config/dconf.symlink/gnome.conf
@@ -4,3 +4,12 @@ gtk-theme='Adwaita'
 
 [org/gnome/desktop/background]
 show-desktop-icons=false
+
+[org/gnome/settings-daemon/plugins/keyboard]
+active=false
+
+[org/gnome/settings-daemon/plugins/media-keys]
+active=false
+
+[org/gnome/settings-daemon/plugins/mouse]
+active=false
