--- a/gnome/config/gtk-3.0.symlink/settings.ini
+++ b/gnome/config/gtk-3.0.symlink/settings.ini
@@ -1,18 +1,17 @@
 [Settings]
-gtk-icon-theme-name=Adwaita
-gtk-theme-name=Adwaita
-gtk-font-name=Ubuntu 11
+gtk-icon-theme-name=Arc
+gtk-theme-name=Arc-Dark
+gtk-font-name=DejaVu Sans 11
 gtk-application-prefer-dark-theme=1
-gtk-cursor-theme-name=DMZ-White
-gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=0
-gtk-menu-images=0
+gtk-button-images=1
+gtk-menu-images=1
 gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=0
+gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
-gtk-modules=canberra-gtk-module
